tests/tooling/fixtures/native/recovery/negative/negative_message_parser_nil_bound_identifier_missing_selector.objc3
// Negative fixture: nil-bound identifier receiver message-send missing selector identifier.
// Expected diagnostic code(s): O3P113.
module NegativeMessageParserNilBoundIdentifierMissingSelector;

fn main() {
  let receiver = nil;
  return [receiver : 1];
}
